server.tests: Use TSP client in ExperimentManagerServiceTest
Signed-off-by: Bernd Hufmann <bernd.hufmann@ericsson.com>