@@ -18,13 +18,9 @@ import static org.junit.Assert.assertTrue;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
+import java.util.UUID;
 
-import javax.ws.rs.client.Entity;
-import javax.ws.rs.client.WebTarget;
-import javax.ws.rs.core.Response;
 import javax.ws.rs.core.Response.Status;
 
 import org.eclipse.core.resources.IFile;
@@ -38,200 +34,173 @@ import org.eclipse.core.runtime.FileLocator;
 import org.eclipse.core.runtime.IPath;
 import org.eclipse.core.runtime.Path;
 import org.eclipse.jdt.annotation.NonNull;
-import org.eclipse.tracecompass.incubator.internal.trace.server.jersey.rest.core.model.views.QueryParameters;
 import org.eclipse.tracecompass.incubator.internal.trace.server.jersey.rest.core.services.ExperimentManagerService;
-import org.eclipse.tracecompass.incubator.trace.server.jersey.rest.core.tests.stubs.ExperimentErrorResponseStub;
-import org.eclipse.tracecompass.incubator.trace.server.jersey.rest.core.tests.stubs.ExperimentModelStub;
-import org.eclipse.tracecompass.incubator.trace.server.jersey.rest.core.tests.stubs.TraceModelStub;
-import org.eclipse.tracecompass.incubator.trace.server.jersey.rest.core.tests.utils.RestServerTest;
+import org.eclipse.tracecompass.incubator.trace.server.jersey.rest.core.tests.utils.NewRestServerTest;
+import org.eclipse.tracecompass.incubator.tsp.client.core.ApiException;
+import org.eclipse.tracecompass.incubator.tsp.client.core.model.Experiment;
+import org.eclipse.tracecompass.incubator.tsp.client.core.model.Experiment.IndexingStatusEnum;
+import org.eclipse.tracecompass.incubator.tsp.client.core.model.ExperimentErrorResponse;
+import org.eclipse.tracecompass.incubator.tsp.client.core.model.ExperimentParameters;
+import org.eclipse.tracecompass.incubator.tsp.client.core.model.ExperimentQueryParameters;
+import org.eclipse.tracecompass.incubator.tsp.client.core.model.Trace;
 import org.eclipse.tracecompass.testtraces.ctf.CtfTestTrace;
 import org.eclipse.tracecompass.tmf.core.TmfCommonConstants;
 import org.eclipse.tracecompass.tmf.core.TmfProjectNature;
 import org.eclipse.tracecompass.tmf.core.io.ResourceUtil;
 import org.junit.Test;
 
-import com.google.common.collect.ImmutableSet;
-
 /**
  * Test the {@link ExperimentManagerService}
  *
  * @author Loic Prieur-Drevon
+ * @author Bernd Hufamnn
  */
 @SuppressWarnings("null")
-public class ExperimentManagerServiceTest extends RestServerTest {
+public class ExperimentManagerServiceTest extends NewRestServerTest {
 
     private static final String TEST = "test";
-    private static final @NonNull ImmutableSet<TraceModelStub> CONTEXT_SWITCH_SET = ImmutableSet.of(sfContextSwitchesKernelStub, sfContextSwitchesUstStub);
-    private static final @NonNull ImmutableSet<TraceModelStub> CONTEXT_SWITCH_NOT_INITIALIZED_SET = ImmutableSet.of(sfContextSwitchesKernelNotInitializedStub, sfContextSwitchesUstNotInitializedStub);
-    private static final @NonNull ExperimentModelStub EXPECTED = new ExperimentModelStub(TEST, CONTEXT_SWITCH_SET);
+    private static final @NonNull List<Trace> CONTEXT_SWITCH_SET = List.of(sfContextSwitchesKernelWithOffsetStub, sfContextSwitchesUstWithOffsetStub);
+    private static final @NonNull List<Trace> CONTEXT_SWITCH_NOT_INITIALIZED_SET = List.of(sfContextSwitchesKernelNotInitializedStub, sfContextSwitchesUstNotInitializedStub);
+    private static final @NonNull Experiment EXPECTED = new Experiment()
+            .name(TEST)
+            .traces(CONTEXT_SWITCH_SET)
+            .uuid(getExperimentUUID(TEST))
+            .end(sfContextSwitchesKernelWithOffsetStub.getEnd())
+            .start(sfContextSwitchesKernelWithOffsetStub.getStart())
+            .nbEvents(sfContextSwitchesKernelWithOffsetStub.getNbEvents() + sfContextSwitchesUstWithOffsetStub.getNbEvents())
+            .indexingStatus(IndexingStatusEnum.COMPLETED);
 
     private static final String EXPERIMENT_NAME_EXISTS = "The experiment (name) already exists and both differ."; //$NON-NLS-1$
     private static final String EXPERIMENT_NAME_EXISTS_DETAIL = "The experiment with same name already exists with conflicting parameters. Use a different name to avoid the conflict."; //$NON-NLS-1$
 
     /**
      * Basic test for the {@link ExperimentManagerService}
+     *
+     * @throws ApiException
+     *             if an error occurs
      */
     @Test
-    public void testExperiment() {
-        WebTarget application = getApplicationEndpoint();
-        WebTarget traces = application.path(TRACES);
-        WebTarget expTarget = application.path(EXPERIMENTS);
+    public void testExperiment() throws ApiException {
+        Trace ustStub = assertPost(sfContextSwitchesUstNotInitializedStub);
+        Trace kernelStub = assertPost(sfContextSwitchesKernelNotInitializedStub);
+        assertEquals(CONTEXT_SWITCH_NOT_INITIALIZED_SET, getTraces());
 
-        TraceModelStub ustStub = assertPost(traces, sfContextSwitchesUstNotInitializedStub);
-        TraceModelStub kernelStub = assertPost(traces, sfContextSwitchesKernelNotInitializedStub);
-        assertEquals(CONTEXT_SWITCH_NOT_INITIALIZED_SET, getTraces(traces));
+        assertEquals("experiment set should be empty at this point", Collections.emptyList(), getExperiments());
 
-        assertEquals("experiment set should be empty at this point", Collections.emptySet(), getExperiments(expTarget));
+        Experiment expStub = assertPostExperiment(TEST, ustStub, kernelStub);
 
-        List<String> traceUUIDs = new ArrayList<>();
-        traceUUIDs.add(ustStub.getUUID().toString());
-        traceUUIDs.add(kernelStub.getUUID().toString());
+        assertEquals("Failed to POST the experiment", EXPECTED, expStub);
+        assertEquals("Failed to add experiment to set of experiments", List.of(EXPECTED), getExperiments());
+        assertEquals("Adding an experiment should not change the trace set", CONTEXT_SWITCH_NOT_INITIALIZED_SET, getTraces());
+        assertEquals("Failed to get the experiment by its UUID", EXPECTED, getExperiment(expStub.getUUID()));
 
-        Map<String, Object> parameters = new HashMap<>();
-        parameters.put(NAME, EXPECTED.getName());
-        parameters.put(TRACES, traceUUIDs);
-
-        ExperimentModelStub expStub = null;
-        try (Response response = expTarget.request().post(Entity.json(new QueryParameters(parameters, Collections.emptyList())))) {
-            expStub = response.readEntity(ExperimentModelStub.class);
-            assertEquals("Failed to POST the experiment", EXPECTED, expStub);
-            assertEquals("Failed to add experiment to set of experiments", Collections.singleton(EXPECTED), getExperiments(expTarget));
-            assertEquals("Adding an experiment should not change the trace set", CONTEXT_SWITCH_NOT_INITIALIZED_SET, getTraces(traces));
-            assertEquals("Failed to get the experiment by its UUID", EXPECTED, expTarget.path(expStub.getUUID().toString()).request().get(ExperimentModelStub.class));
-        }
-        try (Response deleteResponse = expTarget.path(expStub.getUUID().toString()).request().delete()) {
-            assertEquals("Failed to DELETE the experiment", EXPECTED, deleteResponse.readEntity(ExperimentModelStub.class));
-            assertEquals("experiment set should be empty at this point", Collections.emptySet(), getExperiments(expTarget));
-            assertEquals("Deleting an experiment should not change the trace set", CONTEXT_SWITCH_NOT_INITIALIZED_SET, getTraces(traces));
-        }
+        Experiment deletedExperiment = deleteExperiment(expStub.getUUID());
+        assertEquals("Failed to DELETE the experiment", EXPECTED, deletedExperiment);
+        assertEquals("experiment set should be empty at this point", Collections.emptyList(), getExperiments());
+        assertEquals("Deleting an experiment should not change the trace set", CONTEXT_SWITCH_NOT_INITIALIZED_SET, getTraces());
     }
 
     /**
      * Test posting an experiment twice, it should be OK
+     *
+     * @throws ApiException
+     *             if an error occurs
      */
     @Test
-    public void testRePost() {
-        WebTarget application = getApplicationEndpoint();
-        WebTarget traces = application.path(TRACES);
-        WebTarget expTarget = application.path(EXPERIMENTS);
+    public void testRePost() throws ApiException {
+        Trace ustStub = assertPost(sfContextSwitchesUstNotInitializedStub);
+        Trace kernelStub = assertPost(sfContextSwitchesKernelNotInitializedStub);
+        assertEquals(CONTEXT_SWITCH_NOT_INITIALIZED_SET, getTraces());
 
-        TraceModelStub ustStub = assertPost(traces, sfContextSwitchesUstNotInitializedStub);
-        TraceModelStub kernelStub = assertPost(traces, sfContextSwitchesKernelNotInitializedStub);
-        assertEquals(CONTEXT_SWITCH_NOT_INITIALIZED_SET, getTraces(traces));
+        assertEquals("experiment set should be empty at this point", Collections.emptyList(), getExperiments());
 
-        assertEquals("experiment set should be empty at this point", Collections.emptySet(), getExperiments(expTarget));
-
-        List<String> traceUUIDs = new ArrayList<>();
-        traceUUIDs.add(ustStub.getUUID().toString());
-        traceUUIDs.add(kernelStub.getUUID().toString());
-
-        Map<String, Object> parameters = new HashMap<>();
-        parameters.put(NAME, EXPECTED.getName());
-        parameters.put(TRACES, traceUUIDs);
-
-        ExperimentModelStub expStub = null;
-        try (Response response = expTarget.request().post(Entity.json(new QueryParameters(parameters, Collections.emptyList())))) {
-            expStub = response.readEntity(ExperimentModelStub.class);
-            assertEquals("Failed to POST the experiment", EXPECTED, expStub);
-            assertEquals("Failed to add experiment to set of experiments", Collections.singleton(EXPECTED), getExperiments(expTarget));
-            assertEquals("Adding an experiment should not change the trace set", CONTEXT_SWITCH_NOT_INITIALIZED_SET, getTraces(traces));
-            assertEquals("Failed to get the experiment by its UUID", EXPECTED, expTarget.path(expStub.getUUID().toString()).request().get(ExperimentModelStub.class));
-        }
-
+        Experiment expStub = assertPostExperiment(TEST, ustStub, kernelStub);
         // Make a second post with the same name and traces, should return the experiment
-        try (Response response = expTarget.request().post(Entity.json(new QueryParameters(parameters, Collections.emptyList())))) {
-            ExperimentModelStub expStub2 = response.readEntity(ExperimentModelStub.class);
-            assertEquals("Status of second post", Status.OK.getStatusCode(), response.getStatus());
-            assertEquals("Failed to POST the experiment a second time", EXPECTED, expStub2);
-            assertEquals("There should still be only one experiment", Collections.singleton(EXPECTED), getExperiments(expTarget));
-            assertEquals("Adding an experiment should not change the trace set", CONTEXT_SWITCH_NOT_INITIALIZED_SET, getTraces(traces));
-            assertEquals("Failed to get the experiment by its UUID", EXPECTED, expTarget.path(expStub2.getUUID().toString()).request().get(ExperimentModelStub.class));
+        Experiment expStub2 = assertPostExperiment(TEST, ustStub, kernelStub);
 
-        }
+        assertEquals("Failed to POST the experiment a second time", EXPECTED, expStub2);
+        assertEquals("There should still be only one experiment", List.of(EXPECTED), getExperiments());
+        assertEquals("Adding an experiment should not change the trace set", CONTEXT_SWITCH_NOT_INITIALIZED_SET, getTraces());
+        assertEquals("Failed to get the experiment by its UUID", EXPECTED, getExperiment(expStub.getUUID()));
 
-        try (Response deleteResponse = expTarget.path(expStub.getUUID().toString()).request().delete()) {
-            assertEquals("Failed to DELETE the experiment", EXPECTED, deleteResponse.readEntity(ExperimentModelStub.class));
-        }
-        assertEquals("experiment set should be empty at this point", Collections.emptySet(), getExperiments(expTarget));
-        assertEquals("Deleting an experiment should not change the trace set", CONTEXT_SWITCH_NOT_INITIALIZED_SET, getTraces(traces));
-
+        Experiment deletedExperiment = deleteExperiment(expStub.getUUID());
+        assertEquals("Failed to DELETE the experiment", EXPECTED, deletedExperiment);
+        assertEquals("experiment set should be empty at this point", Collections.emptyList(), getExperiments());
+        assertEquals("Deleting an experiment should not change the trace set", CONTEXT_SWITCH_NOT_INITIALIZED_SET, getTraces());
     }
 
     /**
      * Test posting an experiment with different conflicting situations
+     *
+     * @throws ApiException
+     *             if an error occurs
      */
     @Test
-    public void testPostConflicts() {
-        WebTarget application = getApplicationEndpoint();
-        WebTarget traces = application.path(TRACES);
-        WebTarget expTarget = application.path(EXPERIMENTS);
+    public void testPostConflicts() throws ApiException {
+        Trace ustStub = assertPost(sfContextSwitchesUstNotInitializedStub);
+        Trace kernelStub = assertPost(sfContextSwitchesKernelNotInitializedStub);
+        Trace arm64Stub = assertPost(sfArm64KernelNotIntitialzedStub);
+        List<Trace> traceList = new ArrayList<>();
+        traceList.add(sfContextSwitchesUstNotInitializedStub);
+        traceList.add(sfContextSwitchesKernelNotInitializedStub);
+        traceList.add(sfArm64KernelNotIntitialzedStub);
+        traceList.sort(TRACE_COMPARATOR);
+        assertEquals(null, traceList, getTraces());
 
-        TraceModelStub ustStub = assertPost(traces, sfContextSwitchesUstNotInitializedStub);
-        TraceModelStub kernelStub = assertPost(traces, sfContextSwitchesKernelNotInitializedStub);
-        TraceModelStub arm64Stub = assertPost(traces, sfArm64KernelNotIntitialzedStub);
-        ImmutableSet<TraceModelStub> traceSet = ImmutableSet.of(sfContextSwitchesUstNotInitializedStub, sfContextSwitchesKernelNotInitializedStub, sfArm64KernelNotIntitialzedStub);
-        assertEquals(null, traceSet, getTraces(traces));
+        assertEquals("experiment set should be empty at this point", Collections.emptyList(), getExperiments());
 
-        assertEquals("experiment set should be empty at this point", Collections.emptySet(), getExperiments(expTarget));
+        Experiment expStub = assertPostExperiment(TEST, ustStub, kernelStub);
 
-        List<String> traceUUIDs = new ArrayList<>();
-        traceUUIDs.add(kernelStub.getUUID().toString());
-        traceUUIDs.add(ustStub.getUUID().toString());
-
-        Map<String, Object> parameters = new HashMap<>();
-        parameters.put(NAME, EXPECTED.getName());
-        parameters.put(TRACES, traceUUIDs);
-        ExperimentModelStub expStub = null;
-
-        try (Response response = expTarget.request().post(Entity.json(new QueryParameters(parameters, Collections.emptyList())))) {
-            expStub = response.readEntity(ExperimentModelStub.class);
-            assertEquals("Failed to POST the experiment", EXPECTED, expStub);
-            assertEquals("Failed to add experiment to set of experiments", Collections.singleton(EXPECTED), getExperiments(expTarget));
-            assertEquals("Adding an experiment should not change the trace set", traceSet, getTraces(traces));
-            assertEquals("Failed to get the experiment by its UUID", EXPECTED, expTarget.path(expStub.getUUID().toString()).request().get(ExperimentModelStub.class));
-        }
+        assertEquals("Failed to POST the experiment", EXPECTED, expStub);
+        assertEquals("Failed to add experiment to set of experiments", List.of(EXPECTED), getExperiments());
+        assertEquals("Adding an experiment should not change the trace set", traceList, getTraces());
+        assertEquals("Failed to get the experiment by its UUID", EXPECTED, getExperiment(expStub.getUUID()));
 
         // Post same name experiment, but different traces, should return a conflict
-        List<String> traceUUIDs2 = new ArrayList<>();
-        traceUUIDs2.add(kernelStub.getUUID().toString());
-        Map<String, Object> parameters2 = new HashMap<>();
-        parameters2.put(NAME, EXPECTED.getName());
-        parameters2.put(TRACES, traceUUIDs2);
-        try (Response response2 = expTarget.request().post(Entity.json(new QueryParameters(parameters2, Collections.emptyList())))) {
-            assertEquals("Expected a conflict for posting different experiment", Status.CONFLICT.getStatusCode(), response2.getStatus());
-            ExperimentErrorResponseStub errorResponse = response2.readEntity(ExperimentErrorResponseStub.class);
-            assertEquals("Conflict detail should be returned", EXPERIMENT_NAME_EXISTS, errorResponse.getTitle());
+        List<UUID> traceUUIDs = List.of(kernelStub.getUUID());
+        ExperimentParameters params = new ExperimentParameters().name(EXPECTED.getName()).traces(traceUUIDs);
+        ExperimentQueryParameters experimentQueryParameters = new ExperimentQueryParameters().parameters(params);
+        try {
+            sfExpApi.postExperiment(experimentQueryParameters);
+        } catch (ApiException e) {
+            assertEquals(Status.CONFLICT.getStatusCode(), e.getCode());
+            ExperimentErrorResponse errorResponse = deserializeErrorResponse(e.getResponseBody(), ExperimentErrorResponse.class);
+            assertNotNull(errorResponse);
+            assertEquals("Conflict name should be returned", EXPERIMENT_NAME_EXISTS, errorResponse.getTitle());
             assertEquals("Conflict detail should be returned", EXPERIMENT_NAME_EXISTS_DETAIL, errorResponse.getDetail());
-            ExperimentModelStub traceObj = errorResponse.getExperiment();
-            assertEquals("Conflict should return original experiment", EXPECTED, traceObj);
-            assertEquals("There should still be only one experiment", ImmutableSet.of(EXPECTED), getExperiments(expTarget));
-            assertEquals("Failing to add an experiment should not change the trace set", traceSet, getTraces(traces));
-            assertEquals("Failed to get the experiment by its UUID", EXPECTED, expTarget.path(expStub.getUUID().toString()).request().get(ExperimentModelStub.class));
+            Experiment experimentObj = errorResponse.getExperiment();
+            sortExperiment(experimentObj);
+            assertEquals("Conflict should return original experiment", EXPECTED, experimentObj);
+            assertEquals("There should still be only one experiment", List.of(EXPECTED), getExperiments());
+            assertEquals("Failing to add an experiment should not change the trace set", traceList, getTraces());
+            assertEquals("Failed to get the experiment by its UUID", EXPECTED, getExperiment(expStub.getUUID()));
         }
 
         // Post same experiment name, but with traces with the same names, but not the same traces
-        List<String> traceUUIDs3 = new ArrayList<>();
-        traceUUIDs3.add(arm64Stub.getUUID().toString());
-        traceUUIDs3.add(ustStub.getUUID().toString());
-        Map<String, Object> parameters3 = new HashMap<>();
-        parameters3.put(NAME, EXPECTED.getName());
-        parameters3.put(TRACES, traceUUIDs3);
-        try (Response response3 = expTarget.request().post(Entity.json(new QueryParameters(parameters3, Collections.emptyList())))) {
-            assertEquals("Expected a conflict for posting different experiment", Status.CONFLICT.getStatusCode(), response3.getStatus());
-            ExperimentErrorResponseStub errorResponse = response3.readEntity(ExperimentErrorResponseStub.class);
-            assertEquals("Conflict detail should be returned", EXPERIMENT_NAME_EXISTS, errorResponse.getTitle());
+        traceUUIDs = List.of(arm64Stub.getUUID(), ustStub.getUUID());
+        params = new ExperimentParameters().name(EXPECTED.getName()).traces(traceUUIDs);
+        experimentQueryParameters = new ExperimentQueryParameters().parameters(params);
+
+        try {
+            sfExpApi.postExperiment(experimentQueryParameters);
+        } catch (ApiException e) {
+            assertEquals(Status.CONFLICT.getStatusCode(), e.getCode());
+            ExperimentErrorResponse errorResponse = deserializeErrorResponse(e.getResponseBody(), ExperimentErrorResponse.class);
+            assertNotNull(errorResponse);
+            assertEquals("Conflict name should be returned", EXPERIMENT_NAME_EXISTS, errorResponse.getTitle());
             assertEquals("Conflict detail should be returned", EXPERIMENT_NAME_EXISTS_DETAIL, errorResponse.getDetail());
-            ExperimentModelStub traceObj = errorResponse.getExperiment();
-            assertEquals("Conflict should return original experiment", EXPECTED, traceObj);
-            assertEquals("There should still be only one experiment", ImmutableSet.of(EXPECTED), getExperiments(expTarget));
-            assertEquals("Failing to add an experiment should not change the trace set", traceSet, getTraces(traces));
-            assertEquals("Failed to get the new experiment by its UUID", EXPECTED, expTarget.path(expStub.getUUID().toString()).request().get(ExperimentModelStub.class));
+            Experiment experimentObj = errorResponse.getExperiment();
+            sortExperiment(experimentObj);
+            assertEquals("Conflict should return original experiment", EXPECTED, experimentObj);
+            assertEquals("There should still be only one experiment", List.of(EXPECTED), getExperiments());
+            assertEquals("Failing to add an experiment should not change the trace set", traceList, getTraces());
+            assertEquals("Failed to get the experiment by its UUID", EXPECTED, getExperiment(expStub.getUUID()));
         }
-        try (Response deleteResponse = expTarget.path(expStub.getUUID().toString()).request().delete()) {
-            assertEquals("Failed to DELETE the experiment", EXPECTED, deleteResponse.readEntity(ExperimentModelStub.class));
-            assertEquals("experiment set should be empty at this point", Collections.emptySet(), getExperiments(expTarget));
-            assertEquals("Deleting an experiment should not change the trace set", traceSet, getTraces(traces));
-        }
+
+        Experiment deletedExperiment = deleteExperiment(expStub.getUUID());
+        assertEquals("Failed to DELETE the experiment", EXPECTED, deletedExperiment);
+        assertEquals("experiment set should be empty at this point", Collections.emptyList(), getExperiments());
+        assertEquals("Deleting an experiment should not change the trace set", traceList, getTraces());
     }
 
     /**
@@ -244,24 +213,11 @@ public class ExperimentManagerServiceTest extends RestServerTest {
      */
     @Test
     public void testWorkspaceStructure() throws CoreException, IOException {
-        WebTarget applicationTarget = getApplicationEndpoint();
-        WebTarget tracesTarget = applicationTarget.path(TRACES);
-        WebTarget experimentsTarget = applicationTarget.path(EXPERIMENTS);
+        Trace ustStub = assertPost(sfContextSwitchesUstNotInitializedStub);
+        Trace kernelStub = assertPost(sfContextSwitchesKernelNotInitializedStub);
 
-        TraceModelStub ustStub = assertPost(tracesTarget, sfContextSwitchesUstNotInitializedStub);
-        TraceModelStub kernelStub = assertPost(tracesTarget, sfContextSwitchesKernelNotInitializedStub);
+        assertPostExperiment(TEST, ustStub, kernelStub);
 
-        List<String> traceUUIDs = new ArrayList<>();
-        traceUUIDs.add(ustStub.getUUID().toString());
-        traceUUIDs.add(kernelStub.getUUID().toString());
-
-        Map<String, Object> parameters = new HashMap<>();
-        parameters.put(NAME, EXPECTED.getName());
-        parameters.put(TRACES, traceUUIDs);
-
-        try (Response response = experimentsTarget.request().post(Entity.json(new QueryParameters(parameters, Collections.emptyList())))) {
-            assertNotNull(response);
-        }
         IWorkspaceRoot root = ResourcesPlugin.getWorkspace().getRoot();
 
         // Make sure that workspace is refreshed
